--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,50 @@
 <html>
+<head>
+<link rel="stylesheet" href="./static/css/bootstrap.min.css">
+<link rel="stylesheet" href="./static/css/site.css">
+
+<script type="text/javascript" src="./static/js/bootstrap.bundle.min.js"></script>
+
+<title>Webshoppe Online Shop</title>
+</head>
 <body>
-<h2>Hello World!</h2>
+ <header>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+   <a class="navbar-brand" href="#">...</a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+   </button>
+   <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+     <li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
+    </ul>
+   </div>
+  </nav>
+ </header>
+
+ <!-- Begin page content -->
+ <main role="main" class="container">
+ <h2 class="mt-5">Search Toy</h2>
+ 
+  <form action="./toy-catalog" method="POST">
+  <div class="form-group">
+    <label for="formGroupExampleInput">Minimum Price</label>
+    <input type="text" class="form-control" id="minimum-price" name="minimum-price" placeholder="e.g. 100">
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Maximum Price</label>
+    <input type="text" class="form-control" id="maximum-price" name="maximum-price" placeholder="e.g. 200">
+  </div>
+   <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+ 
+ </main>
+
+ <footer class="footer">
+  <div class="container">
+   <span class="text-muted">Place sticky footer content here.</span>
+  </div>
+ </footer>
 </body>
 </html>
